# Rise-in_Rust_Workshop

./: Cargo.toml  README.md  dfx.json  package.json
src/proje1_backend/: Cargo.toml  proje1_backend.did
src/proje1_frontend/: package.json
src/proje1_frontend/src/: App.js
