[package]
name = "proje1_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
candid = "0.10"
colorgrad = "0.6"
ic-cdk = "0.12"
image = { version = "0.24", features = ["png"], default-features = false }
qrcode-generator = "4.1"
serde = { version = "1.0", features = ["derive"] }